--- a/capabilities/AutomationandDevops.html
+++ b/capabilities/AutomationandDevops.html
@@ -296,56 +296,51 @@
    
 
     <footer class="site-footer">
-        <div class="container">
-            <div class="row align-items-center">
+      <div class="container">
+          <div class="row align-items-center">
 
-                <div class="col-lg-12 col-12 border-bottom pb-5 mb-5">
-                    <div class="d-flex">
-                        <a href="index.html" class="navbar-brand">
-                            <span class="brand-text">Dynato</span>
-                        </a>
+              <div class="col-lg-12 col-12 border-bottom pb-5 mb-5">
+                  <div class="d-flex">
+                      <a href="../index.html" class="navbar-brand">
+                          <span class="brand-text">Consultancy</span>
+                      </a>
 
-                        <ul class="social-icon ms-auto">
-                            <li><a href="#" class="social-icon-link bi-facebook"></a></li>
+                      <ul class="social-icon ms-auto">
+                          <li><a href="#" class="social-icon-link bi-facebook"></a></li>
 
-                            <li><a href="#" class="social-icon-link bi-instagram"></a></li>
+                          <li><a href="#" class="social-icon-link bi-instagram"></a></li>
 
-                            <li><a href="#" class="social-icon-link bi-whatsapp"></a></li>
+                          <li><a href="#" class="social-icon-link bi-whatsapp"></a></li>
 
-                            <li><a href="#" class="social-icon-link bi-youtube"></a></li>
-                        </ul>
-                    </div>
-                </div>
+                          <li><a href="#" class="social-icon-link bi-youtube"></a></li>
+                      </ul>
+                  </div>
+              </div>
 
-                <div class="col-lg-7 col-12">
-                    <ul class="footer-menu d-flex flex-wrap">
-                        <li class="footer-menu-item"><a href="#" class="footer-menu-link">Our Story</a></li>
+              <div class="col-lg-7 col-12">
+                  <ul class="footer-menu d-flex flex-wrap">
+                      <li class="footer-menu-item"><a href="about.html" class="footer-menu-link">Our Story</a></li>
 
-                        <li class="footer-menu-item"><a href="#" class="footer-menu-link">Code of Conduct</a></li>
-
-                        <li class="footer-menu-item"><a href="#" class="footer-menu-link">Privacy and Terms</a></li>
-
-                        <li class="footer-menu-item"><a href="#" class="footer-menu-link">Contact</a></li>
-                    </ul>
-                </div>
+                      <li class="footer-menu-item"><a href="contactus.html" class="footer-menu-link">Contact</a></li>
+                  </ul>
+              </div>
 
 
-                <div class="col-lg-5 col-12 ms-lg-auto">
-                    <div class="copyright-text-wrap d-flex align-items-center">
-                        <p class="copyright-text ms-lg-auto me-4 mb-0">Copyright © Dynato
+              <div class="col-lg-5 col-12 ms-lg-auto">
+                  <div class="copyright-text-wrap d-flex align-items-center">
+                      <p class="copyright-text ms-lg-auto me-4 mb-0">Copyright © Dynato
 
-                            <br>All Rights Reserved.
+                          <br>All Rights Reserved.
 
-                        </p>
+                      </p>
 
-                        <a href="#section_1" class="bi-arrow-up arrow-icon custom-link"></a>
-                    </div>
-                </div>
+                      <a href="#section_1" class="bi-arrow-up arrow-icon custom-link"></a>
+                  </div>
+              </div>
 
-            </div>
-        </div>
-    </footer>
-
+          </div>
+      </div>
+  </footer>
   
 
 
