--- a/services/TechnologyService.html
+++ b/services/TechnologyService.html
@@ -247,8 +247,8 @@
 
                 <div class="col-lg-12 col-12 border-bottom pb-5 mb-5">
                     <div class="d-flex">
-                        <a href="index.html" class="navbar-brand">
-                            <span class="brand-text">Dynato</span>
+                        <a href="../index.html" class="navbar-brand">
+                            <span class="brand-text">Consultancy</span>
                         </a>
 
                         <ul class="social-icon ms-auto">
@@ -265,13 +265,9 @@
 
                 <div class="col-lg-7 col-12">
                     <ul class="footer-menu d-flex flex-wrap">
-                        <li class="footer-menu-item"><a href="#" class="footer-menu-link">Our Story</a></li>
+                        <li class="footer-menu-item"><a href="about.html" class="footer-menu-link">Our Story</a></li>
 
-                        <li class="footer-menu-item"><a href="#" class="footer-menu-link">Code of Conduct</a></li>
-
-                        <li class="footer-menu-item"><a href="#" class="footer-menu-link">Privacy and Terms</a></li>
-
-                        <li class="footer-menu-item"><a href="#" class="footer-menu-link">Contact</a></li>
+                        <li class="footer-menu-item"><a href="contactus.html" class="footer-menu-link">Contact</a></li>
                     </ul>
                 </div>
 
@@ -291,7 +287,6 @@
             </div>
         </div>
     </footer>
-
     
 
 
